Small fixes to button and countdown alignment

--- a/css/mm-components-public.css
+++ b/css/mm-components-public.css
@@ -33,6 +33,10 @@
 /**
  * Countdown
  */
+.mm-countdown {
+	text-align: center;
+}
+
 .mm-countdown .unit {
 	display: inline-block;
 	margin-right: 1em;
